@@ -1,40 +1,40 @@
 package coffee.ssafy.ssafee.domain.shop.service;
 
 import coffee.ssafy.ssafee.domain.shop.dto.request.MenuRequest;
-import coffee.ssafy.ssafee.domain.shop.dto.response.MenuResponse;
+import coffee.ssafy.ssafee.domain.shop.dto.response.MenuDetailResponse;
 import coffee.ssafy.ssafee.domain.shop.entity.Menu;
 import coffee.ssafy.ssafee.domain.shop.entity.MenuCategory;
 import coffee.ssafy.ssafee.domain.shop.entity.Shop;
+import coffee.ssafy.ssafee.domain.shop.exception.ShopErrorCode;
+import coffee.ssafy.ssafee.domain.shop.exception.ShopException;
 import coffee.ssafy.ssafee.domain.shop.mapper.MenuMapper;
 import coffee.ssafy.ssafee.domain.shop.repository.MenuRepository;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@Transactional
 @RequiredArgsConstructor
 public class MenuService {
 
     @PersistenceContext
     private final EntityManager entityManager;
-    private final MenuMapper menuMapper;
     private final MenuRepository menuRepository;
+    private final MenuMapper menuMapper;
+    private final S3Service s3Service;
 
-    @Transactional
-    public List<MenuResponse> getMenusByCategory(Long shopId, Long menuCategoryId) {
-        List<Menu> menus = menuRepository.findByShopIdAndMenuCategoryId(shopId, menuCategoryId);
-
-        return menus.stream()
-                .map(menuMapper::toDto).
-                collect(Collectors.toList());
+    public List<MenuDetailResponse> getMenusByCategory(Long shopId, Long menuCategoryId) {
+        return menuRepository.findAllByShopIdAndMenuCategoryId(shopId, menuCategoryId).stream()
+                .map(menuMapper::toDetailDto)
+                .toList();
     }
 
-    @Transactional
     public Long createMenu(Long shopId, Long menuCategoryId, MenuRequest menuRequest) {
         Menu menu = menuMapper.toEntity(menuRequest);
         menu.setMenuCategory(entityManager.getReference(MenuCategory.class, menuCategoryId));
@@ -43,17 +43,20 @@ public class MenuService {
         return menu.getId();
     }
 
-    @Transactional
-    public void updateMenu(Long menuId, MenuRequest menuRequest) {
-        menuRepository.findById(menuId).ifPresent(menu -> {
-            menuMapper.updateMenu(menu, menuRequest);
-            menuRepository.save(menu);
-        });
+    public void updateMenu(Long shopId, Long menuCategoryId, Long menuId, MenuRequest menuRequest) {
+        menuRepository.findByShopIdAndId(shopId, menuId)
+                .orElseThrow(() -> new ShopException(ShopErrorCode.NOT_EXISTS_MENU))
+                .update(menuRequest);
     }
 
-    @Transactional
-    public void deleteMenu(Long menuId) {
-        menuRepository.deleteById(menuId);
+    public void updateMenuImage(Long shopId, Long menuCategoryId, Long menuId, MultipartFile file) {
+        menuRepository.findByShopIdAndId(shopId, menuId)
+                .orElseThrow(() -> new ShopException(ShopErrorCode.NOT_EXISTS_MENU))
+                .updateImage(s3Service.putImage("menus/" + menuId, file));
+    }
+
+    public void deleteMenu(Long shopId, Long menuCategoryId, Long menuId) {
+        menuRepository.deleteByShopIdAndId(shopId, menuId);
     }
 
 }
